[package]
name = "flytrap-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
http = "0.2.9"
reqwest = "0.11.15"
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
scraper = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }
url = "2.3.1"
